# rs-odbc

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: main.yaml  odbc-ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
docker/mariadb/: Dockerfile
docker/mariadb/init/: init.sql
docker/mariadb/odbc/: mariadb_data_source.ini  mariadb_driver.ini
examples/: a.out  c_example.c  num_cols.rs  read_from_table.rs
odbc_derive/: Cargo.toml
odbc_derive/src/: lib.rs
rs-odbc_derive/: Cargo.toml
rs-odbc_derive/src/: lib.rs
rs_odbc_derive/: Cargo.toml
rs_odbc_derive/src/: lib.rs
src/: api.rs  api_back.rs  attr.rs  c_types.rs  col.rs  conn.rs  convert.rs  desc.rs  diag.rs  env.rs  extern_api.rs  handle.rs  info.rs  lib.rs  main.rs  sql_types.rs  sql_types_back.rs  sqlchar_str.rs  sqlreturn.rs  stmt.rs  str.rs  test.rs
tests/: integration.rs
tests/ui/: bind_col.rs  bind_col.stderr  free_conn.rs  free_conn.stderr  free_desc.rs  free_desc.stderr  free_stmt.rs  free_stmt.stderr  get_ard.rs  get_ard.stderr  set_ard.rs  set_ard.stderr
tests/ui_fail/: bind_col.rs  bind_col.stderr  free_conn.rs  free_conn.stderr  free_desc.rs  free_desc.stderr  free_stmt.rs  free_stmt.stderr  get_ard.rs  get_ard.stderr  set_ard.rs  set_ard.stderr
