[package]
name = "rs-odbc"
version = "0.1.0"
authors = ["Marin Veršić <marin.versic101@gmail.com>"]
description = "Minimal safe Rust implementation of ODBC"
repository="https://github.com/mversic/rs-odbc"
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[dev-dependencies]
trybuild = "*"
mockall = "*"
# TODO: use miri eventually

[dependencies]
rs-odbc_derive = {path = "./rs-odbc_derive", version = "0.1.0"}
mockall_double = "*"

[features]
default = [] # TODO: Add static as default feature
# TODO: Rename odbc_debug to something more appropriate like runtime_checks
# odbc_debug = []
static = []
