[package]
name = "rs-odbc"
version = "0.2.0"
authors = ["Marin Veršić <marin.versic101@gmail.com>"]
description = "Minimal safe Rust implementation of ODBC"
repository="https://github.com/mversic/rs-odbc"
license = "Apache-2.0"
edition = "2024"

[dev-dependencies]
trybuild = "1.0.114"
mockall = "0.14.0"
# TODO: use miri eventually

[dependencies]
rs-odbc_derive = "0.1.0"
mockall_double = "0.3.1"

[features]
default = ["std"]
std = []

# TODO: Rename odbc_debug to something more appropriate like runtime_checks
# odbc_debug = []

# Enables static linking
static = []
