[package]
name = "rs-odbc_derive"
version = "0.1.0"
authors = ["Marin Veršić <marin.versic101@gmail.com>"]
description = "Proc macros for rs-odbc crate"
repository="https://github.com/mversic/rs-odbc/rs-odbc_derive"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = "^1"
